--- a/styles/main.css
+++ b/styles/main.css
@@ -66,6 +66,11 @@ html {
  color: rgb(233,50,117);
  }
 
+.links-container .navbar-link:active {
+color: rgb(233,50,117);
+background-color: rgb(255,255,255);
+}
+
 .container {
      margin: 0 auto;
      max-width: 64rem;
