--- a/styles/main.css
+++ b/styles/main.css
@@ -69,7 +69,11 @@ html {
 .container {
      margin: 0 auto;
      max-width: 64rem;
- }
+}
+
+.container.narrow {
+      max-width: 56rem;
+}
 
 /* Medium and small screens (640px) */
 @media (min-width: 640px) {
